src/objects/Internal_Activity__c.object
<CustomObject>
    <description>Object storing agent feedback on articles.</description>
    <fields>
        <fullName>Article_ID__c</fullName>
        <label>Article ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Close_Date__c</fullName>
        <label>Assessment Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assessment_Closed_By__c</fullName>
        <label>Assessment Closed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Open_Date__c</fullName>
        <label>Assessment Open Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assessment_SLA_Flag__c</fullName>
        <label>Assessment SLA Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assessment_SLA__c</fullName>
        <formula>CASE(Assessment_SLA_Flag__c, 
/*Prod*/
&apos;Red&apos;, IMAGE(&apos;/servlet/servlet.ImageServer?id=01580000001sNrm&amp;oid=&apos;+$Organization.Id,&apos;Red&apos;), 
&apos;Green&apos;, IMAGE(&apos;/servlet/servlet.ImageServer?id=01580000001sNrl&amp;oid=&apos;+$Organization.Id,&apos;Green&apos;), 
&apos;Yellow&apos;,IMAGE(&apos;/servlet/servlet.ImageServer?id=01580000001sNrn&amp;oid=&apos;+$Organization.Id,&apos;Yellow&apos;),&apos;&apos;)
/*ACC*/
/*&apos;Red&apos;, IMAGE(&apos;/servlet/servlet.ImageServer?id= 015V0000000DtRt&amp;oid=&apos;+$Organization.Id,&apos;Red&apos;), 
&apos;Green&apos;, IMAGE(&apos;/servlet/servlet.ImageServer?id= 015V0000000DtRs&amp;oid=&apos;+$Organization.Id,&apos;Green&apos;), 
&apos;Yellow&apos;,IMAGE(&apos;/servlet/servlet.ImageServer?id= 015V0000000DtRu&amp;oid=&apos;+$Organization.Id,&apos;Yellow&apos;),&apos;&apos;) */
/*DEV*/
/*&apos;Red&apos;, IMAGE(&apos;/servlet/servlet.ImageServer?id= 015S0000000PKzA&amp;oid=&apos;+$Organization.Id,&apos;Red&apos;), 
&apos;Green&apos;, IMAGE(&apos;/servlet/servlet.ImageServer?id= 015S0000000PKzK&amp;oid=&apos;+$Organization.Id,&apos;Green&apos;), 
&apos;Yellow&apos;,IMAGE(&apos;/servlet/servlet.ImageServer?id= 015S0000000PKzF&amp;oid=&apos;+$Organization.Id,&apos;Yellow&apos;),&apos;&apos;) */</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessment SLA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Type__c</fullName>
        <label>Assessment Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Assessment__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Availability</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
                <value>
                    <fullName>General Questions</fullName>
                </value>
                <value>
                    <fullName>General Response</fullName>
                </value>
                <value>
                    <fullName>General Usage</fullName>
                </value>
                <value>
                    <fullName>Ingredient</fullName>
                </value>
                <value>
                    <fullName>Insufficient Information (Can&apos;t Respond)</fullName>
                </value>
                <value>
                    <fullName>Knowledge Available</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Translations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assessment__c</fullName>
        <label>Assessment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Valid</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>TEXT(Case__r.Brand__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Knowledge_Article_Suggestion_Intakes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GBU Beauty</fullName>
                </value>
                <value>
                    <fullName>GBU Health, Corporate and Grooming</fullName>
                </value>
                <value>
                    <fullName>GBU Fabric and Homecare</fullName>
                </value>
                <value>
                    <fullName>GBU Baby, Fam and Fem</fullName>
                </value>
                <value>
                    <fullName>SMO Beauty</fullName>
                </value>
                <value>
                    <fullName>SMO Health, Corporate and Grooming</fullName>
                </value>
                <value>
                    <fullName>SMO Fabric and Homecare</fullName>
                </value>
                <value>
                    <fullName>SMO Baby, Fam and Fem</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>TEXT(Case__r.Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <label>Date Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Day_In_Week__c</fullName>
        <formula>CASE( 
MOD( DATEVALUE( Assessment_Open_Date__c ) - DATE(1900, 1, 7), 7), 
0, &quot;Sunday&quot;, 
1, &quot;Monday&quot;, 
2, &quot;Tuesday&quot;, 
3, &quot;Wednesday&quot;, 
4, &quot;Thursday&quot;, 
5, &quot;Friday&quot;, 
6, &quot;Saturday&quot;, &quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day In Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Owner_Type__c</fullName>
        <formula>IF(BEGINS(OwnerId,&apos;00G&apos;) ,
&quot;Queue&quot;,
&quot;User&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <default>true</default>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Case__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reminder_Date__c</fullName>
        <label>Reminder Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMO__c</fullName>
        <formula>Case__r.SMO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SMO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <formula>TEXT(Case__r.Segment__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Knowledge - Increase in Trends</fullName>
                </value>
                <value>
                    <fullName>Knowledge - Suggestion to Improve Knowledge</fullName>
                </value>
                <value>
                    <fullName>Knowledge - Missing, Incomplete Knowledge</fullName>
                </value>
                <value>
                    <fullName>Operational Questions - Research</fullName>
                </value>
                <value>
                    <fullName>Operational Questions - Management Review</fullName>
                </value>
                <value>
                    <fullName>Operational Questions - For Information Only</fullName>
                </value>
                <value>
                    <fullName>Operational Questions - Recontact Consumer</fullName>
                </value>
                <value>
                    <fullName>Operational Questions - Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Internal Activity</label>
    <listViews>
        <fullName>AA_Escalation_Questions_Internal_Activity</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>Type__c</columns>
        <filterScope>Queue</filterScope>
        <label>AA Escalation Questions</label>
        <language>en_US</language>
        <queue>AA_Escalation_Questions</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AA_Fulfillment_Group_Internal_Activity</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>Type__c</columns>
        <filterScope>Queue</filterScope>
        <label>AA Fulfillment Group</label>
        <language>en_US</language>
        <queue>AA_Fulfillment_Group</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AA_Operations_Internal_Activity</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>Type__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,Working</value>
        </filters>
        <label>AA Operations</label>
        <language>en_US</language>
        <queue>AA_Operations</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AA_Social_Media_Supervisor_Internal_Activity</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>Type__c</columns>
        <filterScope>Queue</filterScope>
        <label>AA – Social Media Supervisor</label>
        <language>en_US</language>
        <queue>AA_Social_Media_Supervisor</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AA_TL_Escalation_Answers_Internal_Activity</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>Type__c</columns>
        <filterScope>Queue</filterScope>
        <label>AA TL Escalation Answers</label>
        <language>en_US</language>
        <queue>AA_TL_Escalation_Answers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AMR_Clairol_Escalations_Internal_Activity</fullName>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,Working</value>
        </filters>
        <label>AMR Clairol Escalations</label>
        <language>en_US</language>
        <queue>AMR_Clairol_Escalations</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AMR_NA_AE_Reimbursement_Requests_Internal_Activity</fullName>
        <columns>NAME</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>Type__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>AMR NA -  AE Reimbursement Requests</label>
        <language>en_US</language>
        <queue>AMR_NA_AE_Reimbursement_Requests</queue>
        <sharedTo>
            <group>NA_Reopened_by_CCM</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AMR_NA_Alta_Email_Drafts_Internal_Activity</fullName>
        <filterScope>Queue</filterScope>
        <label>AMR NA Alta Email Drafts</label>
        <queue>AMR_NA_Alta_Email_Drafts</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AMR_NA_Alta_Team_Leaders_Answers_Internal_Activity</fullName>
        <columns>Case__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,Working</value>
        </filters>
        <label>AMR NA Alta Team Leaders Answers</label>
        <language>en_US</language>
        <queue>AMR_NA_Alta_Team_Leaders_Answers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AMR_NA_Alta_Team_Leaders_Internal_Activity</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Case__c</columns>
        <columns>Subject__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,Working</value>
        </filters>
        <label>AMR NA Alta Team Leaders</label>
        <language>en_US</language>
        <queue>AMR_NA_Alta_Team_Leaders</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AMR_NA_CVG_Clairol_TL_Answers_Internal_Activity</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Case__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,Working</value>
        </filters>
        <label>AMR NA CVG Clairol TL Answers</label>
        <language>en_US</language>
        <queue>AMR_NA_CVG_Clairol_TL_Answers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AMR_NA_CVG_TL_Answers_Internal_Activity</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Case__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,Working</value>
        </filters>
        <label>AMR NA CVG TL Answers</label>
        <language>en_US</language>
        <queue>AMR_NA_CVG_TL_Answers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AMR_NA_CVG_Team_Leaders_Internal_Activity</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Case__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,Working</value>
        </filters>
        <label>AMR NA CVG Team Leaders</label>
        <language>en_US</language>
        <queue>AMR_NA_CVG_Team_Leaders</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AMR_NA_Corporate_Privacy_Internal_Activity</fullName>
        <columns>Case__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,Working</value>
        </filters>
        <label>AMR NA Privacy</label>
        <language>en_US</language>
        <queue>AMR_NA_Corporate_Privacy</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AMR_NA_Damage_Claims_Internal_Activity</fullName>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,Working</value>
        </filters>
        <label>AMR NA Damage Claims</label>
        <language>en_US</language>
        <queue>AMR_NA_Damage_Claims</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>IA-{0000000000}</displayFormat>
        <label>Internal Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>